[package]
name = "reqwest-vcr"
version = "0.4.0"
edition = "2021"
description = "Record-and-replay HTTP testing for requests"
repository = "https://github.com/baptiste-le-m/reqwest-vcr/"
authors = ["baptistelemorlec@gmail.com"]
license = "Apache-2.0"
keywords = ["reqwest", "middleware", "vcr"]
categories = ["web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "integration"
path = "tests/integration/lib.rs"

[lib]
path = "src/lib.rs"
name = "reqwest_vcr"


[features]
default = ["reqwest-0_13"]
compress = ["dep:zip"]
reqwest-0_12 = ["dep:reqwest-0_12", "dep:reqwest-middleware-0_4"]
reqwest-0_13 = ["dep:reqwest-0_13", "dep:reqwest-middleware-0_5"]


[dependencies]
anyhow = "^1"
async-trait = "^0.1"
base64 = "0.21.0"
bytes = "1"
zip = { version = "0.6", optional = true }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
lazy_static = "1.4"
reqwest-0_12 = { package = "reqwest", version = "0.12", default-features = false, optional = true }
reqwest-0_13 = { package = "reqwest", version = "0.13", default-features = false, optional = true }
reqwest-middleware-0_4 = { package = "reqwest-middleware", version = "0.4", optional = true }
reqwest-middleware-0_5 = { package = "reqwest-middleware", version = "0.5", optional = true }
serde = "1"
serde_json = "1"
tracing = {version="0.1.36", features=["log"]}
vcr-cassette = "2"

[dev-dependencies]
reqwest-0_12 = { package = "reqwest", version = "0.12", features = ["default-tls"] }
reqwest-0_13 = { package = "reqwest", version = "0.13", features = ["default-tls"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
url = "2.4"

